# ASNet

./: .gitignore  README.md
src/: ASNetAPIIOCP.h  ASNetAPIIOCPContext.h  CMakeLists.txt  ConnectionEpoll.cpp  EventEpoll.cpp  EventEpoll.h  IASNetAPI.h  IASNetAPIClientSPI.h  IASNetAPIPacketHelper.h  IEvent.h  Makefile  Makefile.bas  Property.props
src/ASNet/: ASNetAPIEpoll.cpp  ASNetAPIEpoll.h  ASNetAPIIOCP.cpp  ASNetAPIIOCP.h  ASNetAPIIOCPContext.h  CMakeLists.txt  Connection.h  ConnectionEpoll.cpp  ConnectionIOCP.cpp  IASNetAPI.h  IASNetAPIClientSPI.h  IASNetAPIPacketHelper.h  Makefile  Makefile.linux
src/ASNet/include/: MThread.h  Strand.h
src/ASNet/test/: CMakeLists.txt  Client.cpp  Makefile  Makefile.linux  Server.cpp  TCPClientSpi.cpp  TCPClientSpi.h  TCPServerSpi.cpp  TCPServerSpi.h
src/ASNet/vs2017/ASNet/: ASNet.sln
src/ASNet/vs2017/ASNet/ASNet/: ASNet.vcxproj  ASNet.vcxproj.filters
src/ASNet/vs2017/test/: test.vcxproj  test.vcxproj.filters
src/ASNet/vs2017/test/client/client/: client.vcxproj  client.vcxproj.filters
src/ASNet/vs2017/test/server/server/: server.vcxproj  server.vcxproj.filters
src/test/: CMakeLists.txt  TCPClientSpi.cpp  TCPClientSpi.h  TCPServerSpi.cpp
